<resources>
    <string name="app_name">Xổ số Vũng Tàu APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close_button</string>

    <string name="tip1">Phần lớn người chơi chọn số xổ số của họ chỉ dựa trên ngày sinh của họ, có nghĩa là bạn có thể sẽ phải chia giải độc đắc với một số người trúng giải khác. Điều này thể hiện một bất lợi "thứ yếu". Tốt hơn là nên bao gồm ít nhất một số cao trong tất cả các lựa chọn của bạn.</string>
    <string name="tip2">Bạn có thể giành được các giải thưởng khác ngoài giải độc đắc. Lễ bốc thăm cũng bao gồm một số giải thưởng ít hơn. Bạn phải giữ phần lớn số tiền của mình cho riêng mình nếu bạn thắng. Phát lại tất cả các khoản thu nhập của bạn, bất kể khiêm tốn đến mức nào, sẽ không giúp ích được gì.</string>
    <string name="tip3">Hãy nhớ rằng việc chiến thắng giải độc đắc lotto hoàn toàn phụ thuộc vào may mắn. Một bộ số là tất cả những gì cần thiết để giành chiến thắng .. Một vài tùy chọn bổ sung có thể mang lại cho bạn thêm hy vọng và cải thiện tâm trạng của bạn, điều này thật tốt. Chơi quá nhiều lựa chọn liên quan đến việc đặt cược với tỷ lệ cược rất dài. Thường xuyên tham gia vào các hành vi như vậy là không nên.</string>
    <string name="tip4">Bạn chỉ cần thắng xổ số một lần, mặc dù tỷ lệ cược rất cao. Ngoài ra, những người thường xuyên luôn giành được nó trong các trận hòa. Bạn có thể đến tiếp theo.</string>
    <string name="splash_screen">splash_screen</string>

<string name="g1">Có một số trò chơi xổ số khác, nhưng xổ số là trò chơi được nhiều người yêu thích nhất. Sáu số được chọn ngẫu nhiên từ một nhóm các số cho Xổ số (như số 1 đến số 47). Bạn có thể mua một số Lô tô, còn được gọi là phiếu chơi, có sáu số hoặc được chọn ngẫu nhiên hoặc được chỉ định ngẫu nhiên. Sau đó, các con số được chọn trong một cuộc rút thăm. Bạn thắng nếu các con số trong trò chơi đã chọn của bạn trượt thẳng hàng.</string>
    <string name="g2">Khả năng trúng xổ số là khá xa vời. Bạn chỉ có cơ hội 1 trong 292,2 triệu và 1 trong 302,5 triệu tương ứng khi chơi các trò chơi xổ số phổ biến như Powerball và Mega Millions.</string>
    <string name="g3">Mỗi tiểu bang có một mức thuế khác nhau cho việc trúng xổ số. Trong một số lĩnh vực nhất định, giải thưởng từ 1.000 đô la trở lên phải chịu thuế; ở các tiểu bang khác, chỉ tiền thắng cược với số tiền cao hơn mới bị đánh thuế.</string>
    <string name="g4">Nếu bạn thường xuyên chơi xổ số, việc mua vé thường xuyên có thể khiến bạn "lãng phí" tài chính nếu không trúng thưởng. Điều quan trọng cần nhớ là xổ số có tỷ lệ thành công cực kỳ thấp, có nghĩa là mỗi vé đều có khả năng cao là bạn sẽ không trúng thưởng.</string>
    <string name="g5">Nó thay đổi. Đối với những cá nhân thích chơi xổ số, một số nhóm nhỏ hơn có thể giúp cải thiện tỷ lệ chiến thắng. Tuy nhiên, những người khác tin rằng chi phí của trò chơi không xứng đáng với khả năng thành công mong manh.</string>

<string name="w1">Sử dụng các con số may mắn</string>
<string name="w2">Đi theo số ngẫu nhiên</string>
<string name="w3">Tạo một khuôn mẫu</string>

    <string name="w11">Từ những ngày kỷ niệm đến áo đấu thể thao, những con số may mắn có thể có nhiều hình thức khác nhau. Chọn những người bạn thích hoặc có giá trị tình cảm thực sự là tất cả những gì được yêu cầu.</string>
<string name="w22">Con số nào nghĩ đến đầu tiên? Sau khi bạn viết nó thành văn bản, bạn có thể chọn trước.
Điều duy nhất ngăn bạn chọn các con số một cách ngẫu nhiên theo những cách khác nhau là sự sáng tạo của chính bạn. Đơn giản hơn nữa là bạn chỉ cần đặt bút vào một vài con số và chọn con số mà nó tiếp cận.</string>
<string name="w33">Ví dụ, bạn có thể vẽ một chữ cái trong bảng chữ cái hoặc đơn giản là di chuyển trong một vòng tròn. Hãy biến thứ gì đó trông thật tuyệt khi bạn trình bày với nhân viên thu ngân bằng cách sử dụng tài năng nghệ thuật của bạn.</string>
    <string name="ways_title">3 Cách dễ dàng để chọn các số trong xổ số.</string>
    <string name="button">button</string>
    <string name="banner">banner2</string>

    <string name="pcy1">Chào mừng bạn đến với thông báo bảo mật cho Xổ số Vũng Tàu APP.
APP Xổ số Vũng Tàu luôn nỗ lực để bảo vệ thông tin cá nhân của bạn và tôn trọng quyền riêng tư của bạn. Thông báo về quyền riêng tư này sẽ giải thích cách chúng tôi xử lý dữ liệu cá nhân của bạn khi bạn truy cập trang web của chúng tôi (độc lập với việc bạn truy cập từ đâu), cũng như các quyền riêng tư của bạn và các biện pháp bảo vệ pháp lý được áp dụng để đảm bảo an toàn cho bạn.
Bạn có thể nhấp qua các phần khác nhau của thông báo bảo mật được liệt kê bên dưới vì nó được trình bày theo kiểu nhiều lớp. Bằng cách nhấp vào biểu tượng ở cuối trang này, bạn cũng có thể in bản sao của thông báo. Để hiểu rõ hơn các định nghĩa của bất kỳ cụm từ nào được đề cập trong thông báo về quyền riêng tư này, vui lòng tham khảo Bảng chú giải thuật ngữ.</string>
<string name="pcy2">Bảo mật thông tin cá nhân của bạn là rất quan trọng đối với chúng tôi. Chúng tôi tuân thủ các tiêu chuẩn ngành được chấp nhận chung, bao gồm các biện pháp bảo vệ hành chính, vật lý và kỹ thuật thích hợp để ngăn chặn việc sử dụng, truy cập, thay đổi hoặc tiết lộ trái phép dữ liệu cá nhân của bạn. Ngoài ra, chúng tôi chỉ cho phép nhân viên, đại lý, nhà thầu và các bên thứ ba khác có nhu cầu kinh doanh biết quyền truy cập vào thông tin cá nhân của bạn. Họ có nghĩa vụ duy trì tính bảo mật và sẽ chỉ xử lý thông tin cá nhân của bạn theo chỉ dẫn của chúng tôi.Chúng tôi sử dụng mã hóa SSL để bảo vệ Thông tin Cá nhân mà chúng tôi nhận được từ bạn, chẳng hạn như số thẻ tín dụng của bạn hoặc Thông tin Cá nhân Tài chính khác, trong phạm vi mà chúng tôi làm như vậy. Tuy nhiên, không có kỹ thuật lưu trữ hoặc truyền tải điện tử nào qua Internet là hoàn toàn an toàn. Do đó, trong khi chúng tôi nỗ lực để bảo vệ Thông tin Cá nhân của bạn bằng các biện pháp hợp lý về mặt thương mại, chúng tôi không thể cung cấp sự đảm bảo hoàn toàn về tính bảo mật của Thông tin cá nhân của bạn. Bạn có thể liên hệ với chúng tôi nếu bạn có bất kỳ thắc mắc nào về bảo mật trên Trang web.
Khi chúng tôi có nghĩa vụ pháp lý làm như vậy, chúng tôi sẽ thông báo cho bạn và bất kỳ cơ quan quản lý nào có liên quan về vi phạm và sẽ có các thủ tục để xử lý bất kỳ vi phạm dữ liệu cá nhân nào bị nghi ngờ.</string>
    <string name="pcy3">Để cung cấp cho bạn dịch vụ / sản phẩm tốt nhất và trải nghiệm tốt nhất và an toàn nhất, chúng tôi có lợi nhất là điều hành và quản lý công ty của mình với lợi ích hợp pháp. Trước khi chúng tôi xử lý dữ liệu cá nhân của bạn cho các mục đích hợp pháp của mình, chúng tôi đảm bảo rằng chúng tôi sẽ tính đến và cân nhắc mọi tác động tiềm ẩn đối với bạn (cả tích cực và tiêu cực). Chúng tôi không sử dụng thông tin cá nhân của bạn cho những việc mà tác động đến bạn sẽ lớn hơn lợi ích của chúng tôi (trừ khi chúng tôi có sự đồng ý của bạn hoặc được yêu cầu hoặc cho phép của pháp luật). lợi ích hợp pháp của chúng tôi chống lại bất kỳ ảnh hưởng nào có thể xảy ra đối với bạn liên quan đến các hoạt động cụ thể.
Thực hiện hợp đồng đề cập đến việc sử dụng dữ liệu của bạn để thực hiện hợp đồng mà bạn là một bên hoặc thực hiện hành động theo yêu cầu của bạn trước khi giao kết hợp đồng.
Xử lý dữ liệu cá nhân của bạn để tuân thủ yêu cầu pháp lý hoặc quy định có nghĩa là chúng tôi phải làm như vậy để hoàn thành nghĩa vụ mà chúng tôi phải tuân theo.</string>

<string name="tc1">Các cá nhân dưới mười tám tuổi (18) không được phép sử dụng Trang web (hoặc bất kỳ độ tuổi áp dụng cao hơn nào ở quốc gia có liên quan). Bạn không được phép tạo Tài khoản (được mô tả bên dưới) hoặc sử dụng Dịch vụ nếu độ tuổi của bạn dưới 18 (hoặc bất kỳ độ tuổi áp dụng nào cao hơn) (được định nghĩa bên dưới).</string>
    <string name="tc2">Chúng tôi có thể, trong phạm vi cho phép, hủy Tài khoản của Người dùng và / hoặc quyền truy cập vào Trang web, và / hoặc giữ lại bất kỳ giải thưởng nào vẫn còn nợ Người dùng đó nếu chúng tôi chú ý đến thông qua các phương tiện đáng tin cậy rằng họ dưới 18 tuổi (hoặc độ tuổi áp dụng cao hơn).</string>
    <string name="tc3">Bạn có nhiệm vụ truy cập và sử dụng Trang web cũng như các Dịch vụ tuân theo Điều khoản, tất cả các luật và quy định có liên quan cũng như Chính sách trò chơi có trách nhiệm (xem phần 13). Bạn có nhiệm vụ đảm bảo rằng việc sử dụng Trang web và Dịch vụ của bạn từ quốc gia nơi bạn đang chơi là được phép.

Trang web dành riêng cho việc sử dụng cá nhân và các hoạt động giải trí.</string>
    <string name="tc4">APP Xổ số Vũng Tàu dành riêng cho và thúc đẩy một thái độ có trách nhiệm đối với cờ bạc và cá cược. Vì mục tiêu này, chúng tôi cấm bất kỳ ai dưới 18 tuổi (hoặc độ tuổi được áp dụng ở quốc gia có liên quan) tạo Tài khoản, sử dụng Dịch vụ của chúng tôi và mua Trò chơi chiến thắng tức thì; (ii) khuyên tất cả Người dùng đặt giới hạn cho việc tham gia Rút thăm Xổ số và mua Trò chơi Trúng ngay lập tức; và (iii) không đề nghị Người dùng chuyển sang Xổ số hoặc Nội dung. Chúng tôi khuyên bạn nên ngừng sử dụng và đóng Tài khoản của mình bằng cách sử dụng Công cụ Trang web nếu bạn tin rằng bạn đang sử dụng Dịch vụ của chúng tôi một cách vô trách nhiệm hoặc mua Trò chơi Win liền tay mà chúng tôi cung cấp trên Trang web để làm như vậy. Chúng bao gồm những điều sau:</string>
<string name="tc5">• Bạn có tùy chọn, theo quyết định của mình, để hạn chế số tiền bạn có thể gửi trong một khoảng thời gian nhất định bằng cách sử dụng các công cụ của Trang web.</string>
    <string name="tc6">• Bạn có thể tự do quyết định thời gian bạn có thể đăng nhập vào trang web trong một phiên duy nhất. Bạn sẽ đăng xuất khỏi trang web và bất kỳ trò chơi nào vẫn đang diễn ra sau khi khoảng thời gian này trôi qua.</string>
    <string name="tc7">• Sử dụng các khả năng trên Trang web, bạn có thể quyết định có dành cho mình thời gian tạm dừng cho bất kỳ việc gì từ một ngày đến sáu tuần hay không. Bạn sẽ không thể chơi, gửi tiền, đặt hàng hoặc mua bất cứ thứ gì vào lúc này.</string>
    <string name="tc8">• Bạn có tùy chọn để thiết lập một kiểm tra thực tế, chỉ có sẵn cho Trò chơi Thắng tức thì, theo lựa chọn của bạn. Kiểm tra thực tế tạm dừng chơi mỗi giờ và hiển thị thời gian bạn đã chơi, cùng với số tiền thắng và thua của bạn, trong suốt thời gian đó.</string>






</resources>