<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg12"
    tools:context=".TermsConditionPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:text="ĐIỀU KHOẢN VÀ ĐIỀU KIỆN"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:text="Khả năng chấp nhận các điều khoản và tính hợp pháp của việc sử dụng"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/tc1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:justificationMode="inter_word"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tc2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:justificationMode="inter_word"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tc3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:justificationMode="inter_word"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:text="Chính sách trò chơi có trách nhiệm"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/tc4"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:justificationMode="inter_word"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tc5"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:justificationMode="inter_word"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tc6"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:justificationMode="inter_word"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tc7"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:justificationMode="inter_word"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tc8"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp"
            android:justificationMode="inter_word"
            android:shadowColor="@color/black"
            android:shadowRadius="6"/>

        <TextView
            android:id="@+id/pp2"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="ĐỒNG Ý"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15dp"
            android:background="@drawable/customborder2"
            android:backgroundTint="#AEEA00"
            android:gravity="center"
            android:contentDescription="@string/button"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>