<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentGuide">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chơi câu hỏi thường gặp về xổ số"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Làm thế nào bạn có thể chơi xổ số?"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="@string/g1"
            android:justificationMode="inter_word"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tại sao bạn không nên chơi xổ số?"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="@string/g2"
            android:justificationMode="inter_word"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bạn phải trả bao nhiêu tiền thuế cho một tờ vé số 1.000 đô la?"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="@string/g3"
            android:justificationMode="inter_word"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chơi xổ số có lãng phí tiền bạc không?"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="@string/g4"
            android:justificationMode="inter_word"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Xổ số có đáng giá không?"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="@string/g5"
            android:justificationMode="inter_word"
            android:shadowRadius="5"
            android:shadowColor="#FFAB00"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>